wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
/* Structure fix */
@media only screen and (min-width: 993px) {
  .container {
    width: 100%;
  }
}

@media only screen and (min-width: 601px) {
  .container {
    width: 100%;
  }
}

.mobile-search {
  cursor: pointer;
}

.mobile-search i {
  z-index: 10;
}

.mobile-search .quickSearchInput {
  position: relative;
}

.modal {
  overflow: hidden;
  background-color: #fff;
}

.modal.bottom-sheet {
  max-height: 23%;
}

.modal-content {
  padding-top: 5px;
}

@media only screen and (max-width: 768px) {
  .modal-content {
    padding-top: 25px;
  }
}

#search-nsr {
  background-color: $palette-primary-grey-input;
  margin-top: -20px;
  margin-left: 0px;
  z-index: 1;

}


.modal-content label, .modal-content i {
  z-index: 2;
}

.modal-content label {
  margin-top: -18px;
  left: 1.8rem !important;
}

.modal-content i {
  font-size: 3.8rem;
  margin-top: -8px;
  margin-left: 10px;
}

.modal-close {
  margin-right: 20px;
  margin-top: 10px;
  color: $palette-primary-green;
}

.creamy {
  background-color: $palette-primary-grey;
  border: none;
}

.mobileLogo {
  margin: 0 auto;
  text-align: center;
  margin: 20px 0;
}

.searchSubmit {
  background: $palette-primary-green;

}

@media (max-width: 768px) {
  .searchBtnSubmit {
    display: none;
    width: 0px !important;
  }
  .searchForm {
    width: 100% !important;
  }
}

.notice {

  margin-top: 70px;
}

.card.large .card-image + .card-content,
.card.medium .card-image + .card-content,
.card.small .card-image + .card-content {
  max-height: 100%;
}

/* Move later */
.searchNSR input[type=search] {
  border-bottom: 1px solid #23aabd;
  box-shadow: 0 1px 0 0 #23aabd;
}

.searchNSR input[type=search].invalid, input[type=search]:focus.invalid {
  border-bottom: 1px solid #f44336;
  box-shadow: 0 1px 0 0 #f44336;
}

.searchNSR input[type=search].valid, input[type=search]:focus.valid {
  border-bottom: 1px solid #4caf50;
  box-shadow: 0 1px 0 0 #4caf50;
}

.searchNSR h4 {
  text-transform: uppercase;
  color: #fff !important;
  margin: 0 auto !important;
  font-weight: normal;
  text-align: center !important;
}

li.before {
  position: static !important;
  background-color: transparent !important;
}

.searchNSR p {
  max-width: 80% !important;
}

.openhours.collection .date, .openhours.collection .date-day {
  top: -5px !important;
  font-size: 0.9rem !important;
  display: inline-block;

}

.openhours.collection .date-day {
  top: 0px !important;
  color: alpha-color($palette-primary-grey, 50%, $type: 'dark');
  font-size: 0.9rem !important;
  width: 50px;
}

@media only screen and (max-width: 500px) {
  .searchNSR h4 {
    font-size: 1.2rem;

  }
}

.weekender {
  color: alpha-color($palette-primary-grey, 50%, $type: 'dark');
  font-style: italic;
  font-size: .9rem !important;
}

.weekender.allsections {
  font-size: 1.1rem !important;
}

.secondary-content {
  color: alpha-color($palette-primary-grey, 50%, $type: 'dark');
}

.today span {
  font-weight: 600;
  color: $palette-primary-green !important;
}

.alltoday span {
  color: $palette-primary-green !important;
}

.collection-header {
  font-weight: 600;
  border-bottom: 2px solid alpha-color($palette-primary-grey, 34%, $type: 'dark') !important;
  max-width: 100% !important;
}

.cleanHeader {
  color: $palette-primary-green;
}

.cleanHeader {
  border-bottom: none !important;
}

.collection-header i {
  top: 5px;
  position: relative;
  color: alpha-color($palette-primary-grey, 40%, $type: 'dark');
}

.collection-subheader {
  font-weight: 600;
}

.fulldate {
  min-width: 40px !important;
}

@media (max-width: 1070px) {
  .openhours .collection .collection-item {
    padding: 10px;
  }
}

.left {
  float: left;
}

.right {
  float: right;
}

.secondary-content {
  top: 0px;
}

.openhours .secondary-content {
  font-size: 0.8em;
}

.gform_wrapper input[type=checkbox] + label, .gform_wrapper input[type=radio] + label {
  padding-left: 25px;
}

.mce-content-body iframe[src*="google.com/maps/"],
.mce-content-body iframe[src*="youtube.com/embed/"],
article iframe[src*="google.com/maps/"],
article iframe[src*="youtube.com/embed/"] {
  max-width: 100% !important;
}

textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"] {
  background-color: $palette-primary-grey-input !important;
}

div.wpforms-container-full .wpforms-form input[type=date],
div.wpforms-container-full .wpforms-form input[type=datetime],
div.wpforms-container-full .wpforms-form input[type=datetime-local],
div.wpforms-container-full .wpforms-form input[type=email], div.wpforms-container-full
.wpforms-form input[type=month], div.wpforms-container-full .wpforms-form input[type=number],
div.wpforms-container-full .wpforms-form input[type=password], div.wpforms-container-full .wpforms-form input[type=range],
div.wpforms-container-full .wpforms-form input[type=search], div.wpforms-container-full .wpforms-form input[type=tel],
div.wpforms-container-full .wpforms-form input[type=text], div.wpforms-container-full .wpforms-form input[type=time],
div.wpforms-container-full .wpforms-form input[type=url], div.wpforms-container-full .wpforms-form input[type=week],
div.wpforms-container-full .wpforms-form select, div.wpforms-container-full .wpforms-form textarea {
  background-color:$palette-primary-grey-input !important;

}
div.wpforms-container-full .wpforms-form select:after {
  font-family: 'Material Icons';
  content: 'arrow_drop_down';
}
div.wpforms-container-full .wpforms-form .wpforms-field-label {
  color:$palette-primary-darkgrey;
}
.showmoreExceptions {
  font-weight:600;
  color:$palette-primary-green;
  text-align:Center;
  cursor:pointer;
  padding:10px 0;
}
.showmoreExceptions:hover {
  color:alpha-color($palette-primary-green, 10%, $type:'dark');
}

.openhours {
  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 3s; /* Firefox < 16 */
  -ms-animation: fadein 3s; /* Internet Explorer */
  -o-animation: fadein 3s; /* Opera < 12.1 */
  animation: fadein 3s;
}

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.wpb_wrapper ul {
  margin-top: 0.5rem !important;
}

/* Ie fixes */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {

  h1 {
    font-weight:900 !important;
  }

  .searchNSR .input-field input[type=search]+label,
  .searchNSR .input-field input[type=search]+label.active{
    top:1.1rem !important;
    transform: none !important;
    transition:none !important;
    font-size: 0.9rem !important;
    margin-top:0px !important;
  }
  .searchNSR .sorterings-guide-table li:before {
    content: '';
    padding-left:0px !important;
  }
  .locationmap {
    text-decoration: none !important;
  }
  .searchNSR .fp-table-mobile .meta-fraktion li a,
  .searchNSR .fp-table .meta-fraktion li a,
  .searchNSR .search-autocomplete .meta-fraktion li a,
  .searchNSR .search-content .meta-fraktion li a,
  .searchNSR .sorterings-guide-table .meta-fraktion li a {
    padding: 0px 0px !important;

  }
  .searchNSR .fraktion-icon {
    padding-left:0px !important;
  }
  .mobile-logo {
    margin-top:-32px;
  }


  .collection-item, .collapsible-header {
    text-rendering: optimizeLegibility !important;
    -ms-font-feature-settings: "dlig" 1, "kern" 1, "frac" 1 !important;
    font-kerning: normal !important;
    font-smoothing: antialiased !important;
    transform: none !important;
    letter-spacing: 1px;
  }

  .sites-nav .nav .menu-item a {
    min-width: 80px !important;
  }
  .nav-wrapper {
    min-width:470px;
  }

  .sites-nav .nav .menu-item a {
    min-width: 70px !important;

  }
  @media (max-width: 800px) {
    .sites-nav {
      display:none !important;
    }
    .mob, .mobile-nav {
      display:block !important;
    }

  }
  .wpforms-field-label-inline {
    padding-left:10px !important;
  }
  .wpforms-field-label-inline:before {
    margin-left:0px;
    position:absolute;
    left:-25px !important;

  }

}
.wpforms-field-label-inline {
  padding-left:0px;
  padding-left:26px;
}
@media (max-width: 450px) {
  .tabMobile {
    ul {
      margin-top: 0!important;
    }
  }
}

